--- a/index.html
+++ b/index.html
@@ -4,18 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JW중외제약 리디자인</title>
+    <!-- Add on Font -->
+    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
     <!-- style CSS -->
     <link rel="stylesheet" href="style.CSS" />
-    <!-- J-Query -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
-      integrity="sha512-MXe5EK5gyK+fbhwQy/dukwz9fw71HZcsM4KsyDBDTvMyjymkiO0M5qqU0lF4vqLI4VnKf1+DIKf1GM6RFkO8PA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-      defer
-    ></script>
-    <!-- script JS -->
-    <script src="script.js" defer></script>
   </head>
   <body>
     <header>
@@ -27,20 +19,53 @@
         </div>
         <nav class="menu-box">
           <ul>
-            <li>기업</li>
-            <li>지속가능경영</li>
-            <li>JW Story</li>
-            <li>Health & Life</li>
-            <li>연구</li>
-            <li>제품</li>
-            <li>고객</li>
-            <li>PR • IR</li>
+            <li>
+              <a href="#">기업</a>
+            </li>
+            <li>
+              <a href="#">지속가능경영</a>
+            </li>
+            <li>
+              <a href="#">JW Story</a>
+            </li>
+            <li>
+              <a href="#">Health & Life</a>
+            </li>
+            <li>
+              <a href="#">연구</a>
+            </li>
+            <li>
+              <a href="#">제품</a>
+            </li>
+            <li>
+              <a href="#">고객</a>
+            </li>
+            <li>
+              <a href="#">PR • IR</a>
+            </li>
           </ul>
         </nav>
-        <div class="side-box">3</div>
+        <div class="side-box">
+          <div class="translate-box">
+            <a href="#">
+              <span>KR</span>
+              <img src="Image_file/header-imgs/header-select-icon.png" alt="select-icon" />
+            </a>
+          </div>
+          <div class="tab-box">
+          <a href="#">
+            <img src="Image_file/header-imgs/tab-menu-icon.png" alt="tab-box" />
+          </a>
+        </div>
+        </div>
       </div>
     </header>
     <main></main>
     <footer></footer>
+
+    <!-- J-Query -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" defer></script>
+    <!-- script JS -->
+    <script src="script.js" defer></script>
   </body>
 </html>
