--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>JW중외제약 리디자인</title>
     <!-- Add on Font -->
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
+    <!-- Link Swiper's CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <!-- style CSS -->
     <link rel="stylesheet" href="style.CSS" />
   </head>
@@ -14,11 +16,13 @@
       <div class="hd-container">
         <div class="hd-logo-box">
           <a href="#">
-            <img src="Image_file/header-imgs/header-logo.png" alt="hd-logo" />
+            <img class="hd-logo-c" src="Image_file/header-imgs/header-logo-change.png" alt="hd-logo-color" />
+            <img class="hd-logo-w" src="Image_file/header-imgs/header-logo.png" alt="hd-logo-white" />
           </a>
         </div>
         <nav class="menu-box">
           <ul>
+            <div class="bg-container"></div>
             <li>
               <a href="#">기업</a>
             </li>
@@ -44,6 +48,75 @@
               <a href="#">PR • IR</a>
             </li>
           </ul>
+          <div class="menu-item-container">
+            <ul>
+              <li class="menu-item-initial">기업</li>
+              <li><a href="#">인사말</a></li>
+              <li><a href="#">회사소개</a></li>
+              <li><a href="#">창업정신</a></li>
+              <li><a href="#">연혁</a></li>
+              <li><a href="#">CI소개</a></li>
+              <li><a href="#">JW Promise</a></li>
+              <li><a href="#">JW WAY</a></li>
+              <li><a href="#">생산시설</a></li>
+            </ul>
+            <ul>
+              <li class="menu-item-initial">지속가능경영</li>
+              <li><a href="#">환경적 지속가능성</a></li>
+              <li><a href="#">사회적 지속가능성</a></li>
+              <li><a href="#">지배구조</a></li>
+            </ul>
+            <ul>
+              <li class="menu-item-initial">JW Story</li>
+              <li><a href="#">JW Now</a></li>
+              <li><a href="#">테크 & 트렌드</a></li>
+              <li><a href="#">JW 브랜드</a></li>
+              <li><a href="#">ESG 뉴스</a></li>
+              <li><a href="#">그날의 JW</a></li>
+            </ul>
+            <ul>
+              <li class="menu-item-initial">Health & Life</li>
+              <li><a href="#">의학정보</a></li>
+              <li><a href="#">건강정보</a></li>
+            </ul>
+            <ul>
+              <li class="menu-item-initial">연구</li>
+              <li><a href="#">연구정책</a></li>
+              <li><a href="#">연구센터</a></li>
+              <li><a href="#">기반기술</a></li>
+              <li><a href="#">파이프라인</a></li>
+              <li><a href="#">연구 네트워크</a></li>
+            </ul>
+            <ul>
+              <li class="menu-item-initial">제품</li>
+              <li><a href="#">제품검색</a></li>
+              <li><a href="#">판매약국 찾기</a></li>
+              <li><a href="#">허가변경알림</a></li>
+              <li><a href="#">자주 묻는 질문</a></li>
+            </ul>
+            <ul>
+              <li class="menu-item-initial">고객</li>
+              <li><a href="#">CCM 인사말</a></li>
+              <li><a href="#">CCM 소개</a></li>
+              <li><a href="#">CCM 선언문</a></li>
+              <li><a href="#">제품개선사례</a></li>
+              <li><a href="#">고객문의</a></li>
+              <li><a href="#">1:1 문의하기</a></li>
+              <li><a href="#">지출보고 신청</a></li>
+              <li><a href="#">찾아오시는 길</a></li>
+            </ul>
+            <ul>
+              <li class="menu-item-initial">PR • IR</li>
+              <li><a href="#">프레스룸</a></li>
+              <li><a href="#">JW를 주목하다</a></li>
+              <li><a href="#">알려드립니다</a></li>
+              <li><a href="#">재무정보</a></li>
+              <li><a href="#">주가•공시</a></li>
+              <li><a href="#">IR신청</a></li>
+              <li><a href="#">IR문의하기</a></li>
+              <li><a href="#">Annual Report</a></li>
+            </ul>
+          </div>
         </nav>
         <div class="side-box">
           <div class="translate-box">
@@ -53,18 +126,33 @@
             </a>
           </div>
           <div class="tab-box">
-          <a href="#">
-            <img src="Image_file/header-imgs/tab-menu-icon.png" alt="tab-box" />
-          </a>
-        </div>
+            <a href="#">
+              <img src="Image_file/header-imgs/tab-menu-icon.png" alt="tab-box" />
+            </a>
+          </div>
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="sec-1">
+        <div class="swiper mySwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><img src="Image_file/main-images/sec-1/sec-1-background-img.png" alt="sec-1-background-image" /></div>
+            <div class="swiper-slide">Slide 2</div>
+            <div class="swiper-slide">Slide 3</div>
+          </div>
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
 
     <!-- J-Query -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" defer></script>
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
     <!-- script JS -->
     <script src="script.js" defer></script>
   </body>
