--- a/index.html
+++ b/index.html
@@ -119,11 +119,19 @@
           </div>
         </nav>
         <div class="side-box">
-          <div class="translate-box">
+          <div class="language-box">
+          <div class="translate-box translate-box-1">
             <a href="#">
               <span>KR</span>
               <img src="Image_file/header-imgs/header-select-icon.png" alt="select-icon" />
             </a>
+          </div>
+          <div class="translate-box translate-box-2">
+            <a href="#">
+              <span>EN</span>
+              <img src="Image_file/header-imgs/header-select-icon.png" alt="select-icon" />
+            </a>
+          </div>
           </div>
           <div class="tab-box">
             <a href="#">
@@ -137,17 +145,104 @@
       <section class="sec-1">
         <div class="swiper mySwiper">
           <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="Image_file/main-images/sec-1/sec-1-background-img.png" alt="sec-1-background-image" /></div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
+            <div class="swiper-slide"><img src="Image_file/main-images/sec-1/sec-1-background-img(1).png" alt="sec-1-background-image-1" /></div>
+            <div class="swiper-slide"><img src="Image_file/main-images/sec-1/sec-1-background-img(2).png" alt="sec-1-background-image-2"></div>
+            <div class="swiper-slide"><img src="Image_file/main-images/sec-1/sec-1-background-img(3).png" alt="sec-1-background-image-3"></div>
           </div>
-          <div class="swiper-button-next"></div>
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-pagination"></div>
+        </div>
+        <div class="text-container">
+          <h1>
+            열정과 혁신,
+            <br>
+            경험과 기술력이 만나
+            <br>
+            신약의 새로운 내일을 그리다.
+          </h1>
+          <div class="text-en">
+            <img src="Image_file/main-images/sec-1/text-en-arrow.png" alt="right-arrow">
+            <span>We do Our best for the Future</span>
+          </div>
+          <div class="custom-pagination">
+            <span class="current">01</span>
+            <button class="prev-btn">
+              <img src="Image_file/main-images/sec-1/prev-btn-img.png" alt="prev-btn-img">
+            </button>
+             <div class="progress-bar">
+               <span class="progress"></span>
+             </div>
+             <button class="next-btn">
+              <img src="Image_file/main-images/sec-1/next-btn-img.png" alt="next-btn-img">
+             </button>
+             <span class="total">03</span>
+          </div>
         </div>
       </section>
+      <section class="sec-2">
+      </section>
+      <section class="sec-3">
+      </section>
+      <section class="sec-4">
+      </section>
+      <section class="sec-5">
+      </section>
+      <section class="sec-6">
+      </section>
+      <section class="sec-7">
+      </section>
+      <section class="sec-8">
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="btn-wrap">
+        <div class="logo-box">
+        <a href="#">
+          <img src="Image_file/footer-images/footer-logo.png" alt="ft-logo">
+        </a>
+      </div>
+    <div class="btn">
+        <div class="title"> 그룹사 바로가기 <a href="#"><img src="Image_file/footer-images/select-box-icon.png" alt="ft-arrow"></a></div>
+        <ul>
+            <li><a href="#">JW홀딩스</a></li>
+              <li><a href="#">JW신약</a></li>
+              <li><a href="#">JW생명과학</a></li>
+              <li><a href="#">JW메디칼</a></li>
+              <li><a href="#">JW바이오사이언스</a></li>
+              <li><a href="#">JW생활건강</a></li>
+              <li><a href="#">JW크레아젠</a></li>
+              <li><a href="#">JW케미타운</a></li>
+              <li><a href="#">C&C신약연구소</a></li>
+              <li><a href="#">JW Theriac</a></li>
+              <li><a href="#">JW Euvipharm</a></li>
+              <li><a href="#">JW이종호제단</a></li>
+              <li><a href="#">JWPmall(원내몰)</a></li>
+              <li><a href="#">JWSHOP(약사몰)</a></li>
+        </ul>
+    </div>
+</div>
+        </nav>
+        <div class="ft-bottom-wrapper">
+          <div class="ft-bottom-left">
+            <span class="name-box">대표자명 : 신영섭</span>
+            <div class="address-box">
+              <span>경기도 과천시 과천대로 7길 38 (길현동) JW사옥</span>
+              <span id="between-line"></span>
+              <span>대표번호 : 02-840-6777</span>
+              <span id="between-line"></span>
+              <span>제품상담 : 1588-2675</span>
+            </div>
+            <span class="copy-box">Copyright ⓒ JW중외제약 All rights reserved</span>
+          </div>
+          <div class="ft-bottom-right">
+            <div class="mark-1">
+              <img src="Image_file/footer-images/authentication mark-1.png" alt="authentication mark-1" />
+            </div>
+            <div class="mark-2">
+              <img src="Image_file/footer-images/authentication mark-2.png" alt="authentication mark-2" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <!-- J-Query -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" defer></script>
