--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <header>
       <div class="hd-container">
         <div class="hd-logo-box">
-          <a href="#">
+          <a href="#" onclick="return false">
             <img class="hd-logo-c" src="Image_file/header-imgs/header-logo-change.png" alt="hd-logo-color" />
             <img class="hd-logo-w" src="Image_file/header-imgs/header-logo.png" alt="hd-logo-white" />
           </a>
         </div>
         <nav class="menu-box">
-          <ul>
+          <ul onclick="return false">
             <div class="bg-container"></div>
             <li>
               <a href="#">기업</a>
@@ -49,7 +49,7 @@
             </li>
           </ul>
           <div class="menu-item-container">
-            <ul>
+            <ul onclick="return false">
               <li class="menu-item-initial">기업</li>
               <li><a href="#">인사말</a></li>
               <li><a href="#">회사소개</a></li>
@@ -60,13 +60,13 @@
               <li><a href="#">JW WAY</a></li>
               <li><a href="#">생산시설</a></li>
             </ul>
-            <ul>
+            <ul onclick="return false">
               <li class="menu-item-initial">지속가능경영</li>
               <li><a href="#">환경적 지속가능성</a></li>
               <li><a href="#">사회적 지속가능성</a></li>
               <li><a href="#">지배구조</a></li>
             </ul>
-            <ul>
+            <ul onclick="return false">
               <li class="menu-item-initial">JW Story</li>
               <li><a href="#">JW Now</a></li>
               <li><a href="#">테크 & 트렌드</a></li>
@@ -74,12 +74,12 @@
               <li><a href="#">ESG 뉴스</a></li>
               <li><a href="#">그날의 JW</a></li>
             </ul>
-            <ul>
+            <ul onclick="return false">
               <li class="menu-item-initial">Health & Life</li>
               <li><a href="#">의학정보</a></li>
               <li><a href="#">건강정보</a></li>
             </ul>
-            <ul>
+            <ul onclick="return false">
               <li class="menu-item-initial">연구</li>
               <li><a href="#">연구정책</a></li>
               <li><a href="#">연구센터</a></li>
@@ -87,14 +87,14 @@
               <li><a href="#">파이프라인</a></li>
               <li><a href="#">연구 네트워크</a></li>
             </ul>
-            <ul>
+            <ul onclick="return false">
               <li class="menu-item-initial">제품</li>
               <li><a href="#">제품검색</a></li>
               <li><a href="#">판매약국 찾기</a></li>
               <li><a href="#">허가변경알림</a></li>
               <li><a href="#">자주 묻는 질문</a></li>
             </ul>
-            <ul>
+            <ul onclick="return false">
               <li class="menu-item-initial">고객</li>
               <li><a href="#">CCM 인사말</a></li>
               <li><a href="#">CCM 소개</a></li>
@@ -105,7 +105,7 @@
               <li><a href="#">지출보고 신청</a></li>
               <li><a href="#">찾아오시는 길</a></li>
             </ul>
-            <ul>
+            <ul onclick="return false">
               <li class="menu-item-initial">PR • IR</li>
               <li><a href="#">프레스룸</a></li>
               <li><a href="#">JW를 주목하다</a></li>
@@ -121,15 +121,17 @@
         <div class="side-box">
           <div class="language-box">
           <div class="translate-box translate-box-1">
-            <a href="#">
+            <a href="#" onclick="return false">
               <span>KR</span>
               <img src="Image_file/header-imgs/header-select-icon.png" alt="select-icon" />
             </a>
           </div>
           <div class="translate-box translate-box-2">
-            <a href="#">
+            <a href="#" onclick="return false">
+              <div class="languages-wrapper">
+              <span class="hover">KR</span>
               <span>EN</span>
-              <img src="Image_file/header-imgs/header-select-icon.png" alt="select-icon" />
+              </div>
             </a>
           </div>
           </div>
@@ -200,7 +202,7 @@
         </a>
       </div>
     <div class="btn">
-        <div class="title"> 그룹사 바로가기 <a href="#"><img src="Image_file/footer-images/select-box-icon.png" alt="ft-arrow"></a></div>
+        <div class="title"> 그룹사 바로가기 <a href="#"><img src="Image_file/footer-images/btn-selecter-icon.png" alt="ft-arrow"></a></div>
         <ul>
             <li><a href="#">JW홀딩스</a></li>
               <li><a href="#">JW신약</a></li>
