section 1, 2 & header & footer CLEAR

--- a/index.html
+++ b/index.html
@@ -180,6 +180,14 @@
         </div>
       </section>
       <section class="sec-2">
+        <div class="bg-container">
+          <img src="Image_file/main-images/sec-2/sec-2-background-img.png" alt="sec-2-background-img">
+        </div>
+        <h3 class="slogun-wrapper">
+          글로벌 R&D와 첨단 생산기술로
+          <br>
+          의료기기 국산화에 앞장서다
+        </h3>
       </section>
       <section class="sec-3">
       </section>
@@ -197,14 +205,14 @@
     <footer>
       <div class="btn-wrap">
         <div class="logo-box">
-        <a href="#">
+        <a href="#" onclick="return false">
           <img src="Image_file/footer-images/footer-logo.png" alt="ft-logo">
         </a>
-      </div>
-    <div class="btn">
-        <div class="title"> 그룹사 바로가기 <a href="#"><img src="Image_file/footer-images/btn-selecter-icon.png" alt="ft-arrow"></a></div>
-        <ul>
-            <li><a href="#">JW홀딩스</a></li>
+       </div>
+       <div class="btn">
+          <div class="title"> 그룹사 바로가기 <a href="#"  onclick="return false"><img src="Image_file/footer-images/btn-selecter-icon.png" alt="ft-arrow"></a></div>
+            <ul>
+              <li><a href="#">JW홀딩스</a></li>
               <li><a href="#">JW신약</a></li>
               <li><a href="#">JW생명과학</a></li>
               <li><a href="#">JW메디칼</a></li>
@@ -218,29 +226,44 @@
               <li><a href="#">JW이종호제단</a></li>
               <li><a href="#">JWPmall(원내몰)</a></li>
               <li><a href="#">JWSHOP(약사몰)</a></li>
-        </ul>
-    </div>
-</div>
-        </nav>
-        <div class="ft-bottom-wrapper">
-          <div class="ft-bottom-left">
-            <span class="name-box">대표자명 : 신영섭</span>
-            <div class="address-box">
-              <span>경기도 과천시 과천대로 7길 38 (길현동) JW사옥</span>
-              <span id="between-line"></span>
-              <span>대표번호 : 02-840-6777</span>
-              <span id="between-line"></span>
-              <span>제품상담 : 1588-2675</span>
-            </div>
-            <span class="copy-box">Copyright ⓒ JW중외제약 All rights reserved</span>
+            </ul>
           </div>
-          <div class="ft-bottom-right">
+        </div>
+        <div class="ft-bottom-wrapper">
+          <div class="ft-bottom-box">
+            <nav class="ft-menu-box">
+              <ul onclick="return false">
+                <li><a href="#">개인정보처리방침</a></li>
+                <li><a href="#">전자입찰시스템</a></li>
+                <li><a href="#">출입관리시스템</a></li>
+                <li><a href="#">전자세금계산서</a></li>
+                <li><a href="#">JW안심푸드</a></li>
+                <li><a href="#">JWPmall</a></li>
+                <li><a href="#">JWSHOP</a></li>
+                <li><a href="#">마이코드</a></li>
+              </ul>
+            </nav>
+            <div class="bottom-leftover">
+            <div class="ft-info-container">
+              <span class="name-box">대표자명 : 선영섭</span>
+              <div class="address-box">
+                <span>경기도 과천시 과천대로 7길 38 (길현동) JW사옥</span>
+                <span id="between-liner"></span>
+                <span>대표번호 : 02-840-6777</span>
+                <span id="between-liner"></span>
+                <span>제품상담 : 1588-2675</span>
+              </div>
+              <span class="copy-box">Copyright ⓒ JW중외제약 All rights reserved</span>
+            </div>
+            <div class="ft-bottom-marks">
             <div class="mark-1">
               <img src="Image_file/footer-images/authentication mark-1.png" alt="authentication mark-1" />
             </div>
             <div class="mark-2">
               <img src="Image_file/footer-images/authentication mark-2.png" alt="authentication mark-2" />
             </div>
+          </div>
+          </div>
           </div>
         </div>
       </div>
