--- a/index.html
+++ b/index.html
@@ -183,11 +183,26 @@
         <div class="bg-container">
           <img src="Image_file/main-images/sec-2/sec-2-background-img.png" alt="sec-2-background-img">
         </div>
-        <h3 class="slogun-wrapper">
+        <div class="sec-2-text-box">
+        <h3 class="sec2-text t1">
+          끊임없는 변화와 혁신으로
+          <br>
+          인류의 건강과 미래를 지켜가는,
+        </h3>
+        <h3 class="sec2-text t2">
           글로벌 R&D와 첨단 생산기술로
           <br>
-          의료기기 국산화에 앞장서다
+          의료기기 국산화에 앞장서는,
         </h3>
+        <h3 class="sec2-text t3">
+          한발 앞선 신기술과 국제경쟁력으로
+          <br>
+          혁신신약을 개발하는
+        </h3>
+        <div class="sec2-text t4">
+          <img src="Image_file/main-images/sec-2/sec-2-logo.png" alt="slogun-logo">
+        </div>
+        </div>
       </section>
       <section class="sec-3">
       </section>
@@ -268,7 +283,10 @@
         </div>
       </div>
     </footer>
-
+    <!-- GSAP -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" defer></script>
+     <!-- Scroll Trigger -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" defer></script>
     <!-- J-Query -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" defer></script>
     <!-- Swiper JS -->
