--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <!-- AOS -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <!-- style CSS -->
     <link rel="stylesheet" href="style.CSS" />
   </head>
@@ -122,20 +122,20 @@
         </nav>
         <div class="side-box">
           <div class="language-box">
-          <div class="translate-box translate-box-1">
-            <a href="#" onclick="return false">
-              <span>KR</span>
-              <img src="Image_file/header-imgs/header-select-icon.png" alt="select-icon" />
-            </a>
-          </div>
-          <div class="translate-box translate-box-2">
-            <a href="#" onclick="return false">
-              <div class="languages-wrapper">
-              <span class="hover">KR</span>
-              <span>EN</span>
-              </div>
-            </a>
-          </div>
+            <div class="translate-box translate-box-1">
+              <a href="#" onclick="return false">
+                <span>KR</span>
+                <img src="Image_file/header-imgs/header-select-icon.png" alt="select-icon" />
+              </a>
+            </div>
+            <div class="translate-box translate-box-2">
+              <a href="#" onclick="return false">
+                <div class="languages-wrapper">
+                  <span class="hover">KR</span>
+                  <span>EN</span>
+                </div>
+              </a>
+            </div>
           </div>
           <div class="tab-box">
             <a href="#">
@@ -150,8 +150,8 @@
         <div class="swiper mySwiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide"><img src="Image_file/main-images/sec-1/sec-1-background-img(1).png" alt="sec-1-background-image-1" /></div>
-            <div class="swiper-slide"><img src="Image_file/main-images/sec-1/sec-1-background-img(2).png" alt="sec-1-background-image-2"></div>
-            <div class="swiper-slide"><img src="Image_file/main-images/sec-1/sec-1-background-img(3).png" alt="sec-1-background-image-3"></div>
+            <div class="swiper-slide"><img src="Image_file/main-images/sec-1/sec-1-background-img(2).png" alt="sec-1-background-image-2" /></div>
+            <div class="swiper-slide"><img src="Image_file/main-images/sec-1/sec-1-background-img(3).png" alt="sec-1-background-image-3" /></div>
           </div>
         </div>
         <div class="text-container">
@@ -160,105 +160,101 @@
             <span data-aos="fade-right" data-aos-duration="1000" data-aos-delay="400">경험과 기술력이 만나</span>
             <span data-aos="fade-right" data-aos-duration="1000" data-aos-delay="600">신약의 새로운 내일을 그리다.</span>
           </h1>
-          <div class="text-en">
-            <img src="Image_file/main-images/sec-1/text-en-arrow.png" alt="right-arrow">
+          <div class="text-en" data-aos-once="true" data-aos-offset="-1000" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="800">
+            <img src="Image_file/main-images/sec-1/text-en-arrow.png" alt="right-arrow" />
             <span>We do Our best for the Future</span>
           </div>
           <div class="custom-pagination">
             <span class="current">01</span>
             <button class="prev-btn">
-              <img src="Image_file/main-images/sec-1/prev-btn-img.png" alt="prev-btn-img">
+              <img src="Image_file/main-images/sec-1/prev-btn-img.png" alt="prev-btn-img" />
             </button>
-             <div class="progress-bar">
-               <span class="progress"></span>
-             </div>
-             <button class="next-btn">
-              <img src="Image_file/main-images/sec-1/next-btn-img.png" alt="next-btn-img">
-             </button>
-             <span class="total">03</span>
+            <div class="progress-bar">
+              <span class="progress"></span>
+            </div>
+            <button class="next-btn">
+              <img src="Image_file/main-images/sec-1/next-btn-img.png" alt="next-btn-img" />
+            </button>
+            <span class="total">03</span>
           </div>
         </div>
       </section>
       <section class="sec-2">
         <div class="bg-container">
-          <img src="Image_file/main-images/sec-2/sec-2-background-img.png" alt="sec-2-background-img">
+          <img src="Image_file/main-images/sec-2/sec-2-background-img.png" alt="sec-2-background-img" />
         </div>
         <div class="sec-2-text-box">
-        <h3 class="sec2-text t1">
-          끊임없는 변화와 혁신으로
-          <br>
-          인류의 건강과 미래를 지켜가는,
-        </h3>
-        <h3 class="sec2-text t2">
-          글로벌 R&D와 첨단 생산기술로
-          <br>
-          의료기기 국산화에 앞장서는,
-        </h3>
-        <h3 class="sec2-text t3">
-          한발 앞선 신기술과 국제경쟁력으로
-          <br>
-          혁신신약을 개발하는
-        </h3>
-        <div class="sec2-text t4">
-          <img src="Image_file/main-images/sec-2/sec-2-logo.png" alt="slogun-logo">
+          <h3 class="sec2-text t1">
+            끊임없는 변화와 혁신으로
+            <br />
+            인류의 건강과 미래를 지켜가는,
+          </h3>
+          <h3 class="sec2-text t2">
+            글로벌 R&D와 첨단 생산기술로
+            <br />
+            의료기기 국산화에 앞장서는,
+          </h3>
+          <h3 class="sec2-text t3">
+            한발 앞선 신기술과 국제경쟁력으로
+            <br />
+            혁신신약을 개발하는
+          </h3>
+          <div class="sec2-text t4">
+            <img src="Image_file/main-images/sec-2/sec-2-logo.png" alt="slogun-logo" />
+          </div>
         </div>
-        </div>
       </section>
-      <section class="sec-3">
-      </section>
-      <section class="sec-4">
-      </section>
-      <section class="sec-5">
-      </section>
-      <section class="sec-6">
-      </section>
-      <section class="sec-7">
-      </section>
-      <section class="sec-8">
-      </section>
+      <section class="sec-3"></section>
+      <section class="sec-4"></section>
+      <section class="sec-5"></section>
+      <section class="sec-6"></section>
+      <section class="sec-7"></section>
+      <section class="sec-8"></section>
     </main>
     <footer>
       <div class="btn-wrap">
         <div class="logo-box">
-        <a href="#" onclick="return false">
-          <img src="Image_file/footer-images/footer-logo.png" alt="ft-logo">
-        </a>
-       </div>
-       <div class="btn">
-          <div class="title"> 그룹사 바로가기 <a href="#"  onclick="return false"><img src="Image_file/footer-images/btn-selecter-icon.png" alt="ft-arrow"></a></div>
-            <ul>
-              <li><a href="#">JW홀딩스</a></li>
-              <li><a href="#">JW신약</a></li>
-              <li><a href="#">JW생명과학</a></li>
-              <li><a href="#">JW메디칼</a></li>
-              <li><a href="#">JW바이오사이언스</a></li>
-              <li><a href="#">JW생활건강</a></li>
-              <li><a href="#">JW크레아젠</a></li>
-              <li><a href="#">JW케미타운</a></li>
-              <li><a href="#">C&C신약연구소</a></li>
-              <li><a href="#">JW Theriac</a></li>
-              <li><a href="#">JW Euvipharm</a></li>
-              <li><a href="#">JW이종호제단</a></li>
-              <li><a href="#">JWPmall(원내몰)</a></li>
-              <li><a href="#">JWSHOP(약사몰)</a></li>
-            </ul>
-          </div>
+          <a href="#" onclick="return false">
+            <img src="Image_file/footer-images/footer-logo.png" alt="ft-logo" />
+          </a>
         </div>
-        <div class="ft-bottom-wrapper">
-          <div class="ft-bottom-box">
-            <nav class="ft-menu-box">
-              <ul onclick="return false">
-                <li><a href="#">개인정보처리방침</a></li>
-                <li><a href="#">전자입찰시스템</a></li>
-                <li><a href="#">출입관리시스템</a></li>
-                <li><a href="#">전자세금계산서</a></li>
-                <li><a href="#">JW안심푸드</a></li>
-                <li><a href="#">JWPmall</a></li>
-                <li><a href="#">JWSHOP</a></li>
-                <li><a href="#">마이코드</a></li>
-              </ul>
-            </nav>
-            <div class="bottom-leftover">
+        <div class="btn">
+          <div class="title">
+            그룹사 바로가기 <a href="#" onclick="return false"><img src="Image_file/footer-images/btn-selecter-icon.png" alt="ft-arrow" /></a>
+          </div>
+          <ul>
+            <li><a href="#">JW홀딩스</a></li>
+            <li><a href="#">JW신약</a></li>
+            <li><a href="#">JW생명과학</a></li>
+            <li><a href="#">JW메디칼</a></li>
+            <li><a href="#">JW바이오사이언스</a></li>
+            <li><a href="#">JW생활건강</a></li>
+            <li><a href="#">JW크레아젠</a></li>
+            <li><a href="#">JW케미타운</a></li>
+            <li><a href="#">C&C신약연구소</a></li>
+            <li><a href="#">JW Theriac</a></li>
+            <li><a href="#">JW Euvipharm</a></li>
+            <li><a href="#">JW이종호제단</a></li>
+            <li><a href="#">JWPmall(원내몰)</a></li>
+            <li><a href="#">JWSHOP(약사몰)</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="ft-bottom-wrapper">
+        <div class="ft-bottom-box">
+          <nav class="ft-menu-box">
+            <ul onclick="return false">
+              <li><a href="#">개인정보처리방침</a></li>
+              <li><a href="#">전자입찰시스템</a></li>
+              <li><a href="#">출입관리시스템</a></li>
+              <li><a href="#">전자세금계산서</a></li>
+              <li><a href="#">JW안심푸드</a></li>
+              <li><a href="#">JWPmall</a></li>
+              <li><a href="#">JWSHOP</a></li>
+              <li><a href="#">마이코드</a></li>
+            </ul>
+          </nav>
+          <div class="bottom-leftover">
             <div class="ft-info-container">
               <span class="name-box">대표자명 : 선영섭</span>
               <div class="address-box">
@@ -271,14 +267,13 @@
               <span class="copy-box">Copyright ⓒ JW중외제약 All rights reserved</span>
             </div>
             <div class="ft-bottom-marks">
-            <div class="mark-1">
-              <img src="Image_file/footer-images/authentication mark-1.png" alt="authentication mark-1" />
+              <div class="mark-1">
+                <img src="Image_file/footer-images/authentication mark-1.png" alt="authentication mark-1" />
+              </div>
+              <div class="mark-2">
+                <img src="Image_file/footer-images/authentication mark-2.png" alt="authentication mark-2" />
+              </div>
             </div>
-            <div class="mark-2">
-              <img src="Image_file/footer-images/authentication mark-2.png" alt="authentication mark-2" />
-            </div>
-          </div>
-          </div>
           </div>
         </div>
       </div>
