--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       </div>
     </header>
     <main>
-      <section class="sec-1">
+      <section class="sec-1 section">
         <div class="swiper mySwiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide"><img src="Image_file/main-images/sec-1/sec-1-background-img(1).png" alt="sec-1-background-image-1" /></div>
@@ -179,7 +179,7 @@
           </div>
         </div>
       </section>
-      <section class="sec-2">
+      <section class="sec-2 section">
         <div class="bg-container">
           <img src="Image_file/main-images/sec-2/sec-2-background-img.png" alt="sec-2-background-img" />
         </div>
@@ -209,7 +209,7 @@
           </div>
         </div>
       </section>
-      <section class="sec-3">
+      <section class="sec-3 section">
         <div class="left-box">
           <span>Pipeline of Corp.</span>
           <h2>기업 현황</h2>
@@ -255,7 +255,7 @@
           </a>
         </div>
       </section>
-      <section class="sec-4">
+      <section class="sec-4 section">
         <div class="top-box">
           <span>Field of Study</span>
           <h4>연구 분야</h4>
@@ -283,7 +283,7 @@
           <img src="Image_file/main-images/sec-4/sec-4-background-gradient.png" alt="sec-4-background-gradient" />
         </div>
       </section>
-      <section class="sec-5">
+      <section class="sec-5 section">
         <div class="top-box">
           <span class="span-1">Search of Products</span>
           <span class="span-2">제품 검색</span>
@@ -361,9 +361,9 @@
           </div>
         </div>
       </section>
-      <section class="sec-6"></section>
-      <section class="sec-7"></section>
-      <section class="sec-8"></section>
+      <section class="sec-6 section"></section>
+      <section class="sec-7 section"></section>
+      <section class="sec-8 section"></section>
     </main>
     <footer>
       <div class="btn-wrap">
@@ -432,10 +432,14 @@
         </div>
       </div>
     </footer>
+    <!-- Leins -->
+    <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis/dist/lenis.min.js" defer></script>
     <!-- GSAP -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" defer></script>
     <!-- Scroll Trigger -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" defer></script>
+    <!-- script Main -->
+    <script src="main.js" defer></script>
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
     <!-- J-Query -->
