--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="style.CSS" />
   </head>
   <body>
-    <a href="#" class="top-btn">TOP</a>
+    <a href="#" class="top-btn" onclick="screenTop">TOP</a>
     <header>
       <div class="hd-container">
         <div class="hd-logo-box">
