--- a/index.html
+++ b/index.html
@@ -435,6 +435,7 @@
             <br>
             중외제약의 소식을 가장 먼저 알려드립니다
           </span>
+           <span><a href="#" onclick="return false">VIEW MORE</a></span>
         </div>
         <div class="marquee-wrapper">
   <div class="marquee-box">
