--- a/index.html
+++ b/index.html
@@ -488,6 +488,15 @@
   </div>
 </div> 
       </section>
+      <div class="banner">
+        <div class="banner-wrapper">
+          <span>News Letter</span>
+          <span>JW중외제약의 소식을 가장 먼저 받을 수 있습니다 구독하기를 누르고 홈페이지의 최신 콘텐츠를 받아보세요</span>
+          <a href="#" onclick="return false">
+            <span>구독하기</span>
+          </a>
+        </div>
+      </div>
       <section class="sec-8 section">
         <div class="img-container">
           <img src="Image_file/main-images/sec-8/contact-back-img.png" alt="contact-back-img">
