--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <!-- Slick Slider -->
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <!-- Slick Slider Theme -->
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
     <!-- style CSS -->
     <link rel="stylesheet" href="style.CSS" />
   </head>
@@ -399,32 +398,34 @@
             </a>
           </div>
         </div>
-        <div class="bottom-box">
-          <div class="goods-box">
-            <span>일반의약품</span>
-            <span>덴디돌(정)</span>
-            <a href="#" onclick="return false">
-              <img src="Image_file/main-images/sec-6/goods-1.png" alt="goods-1" />
-            </a>
-            <span>뼈와 치아 형성에 필요</span>
-          </div>
-          <div class="goods-box">
-            <span>일반의약품</span>
-            <span>비타민D3(정)</span>
-            <a href="#" onclick="return false">
-              <img src="Image_file/main-images/sec-6/goods-2.png" alt="goods-2" />
-            </a>
-            <span>비타민 보충에 필요</span>
-          </div>
-          <div class="goods-box">
-            <span>일반의약품</span>
-            <span>프렌즈 아이드롭</span>
-            <a href="#" onclick="return false">
-              <img src="Image_file/main-images/sec-6/goods-3.png" alt="goods-3" />
-            </a>
-            <span>안구건조에 필요</span>
-          </div>
-        </div>
+     <div class="goods-slider">
+  <div class="goods-box">
+    <span>일반의약품</span>
+    <span>덴디돌(정)</span>
+    <a href="#" onclick="return false">
+      <img src="Image_file/main-images/sec-6/goods-1.png" />
+    </a>
+    <span>뼈와 치아 형성에 필요</span>
+  </div>
+
+  <div class="goods-box">
+    <span>일반의약품</span>
+    <span>비타민D3(정)</span>
+    <a href="#" onclick="return false">
+      <img src="Image_file/main-images/sec-6/goods-2.png" />
+    </a>
+    <span>비타민 보충에 필요</span>
+  </div>
+
+  <div class="goods-box">
+    <span>일반의약품</span>
+    <span>프렌즈 아이드롭</span>
+    <a href="#" onclick="return false">
+      <img src="Image_file/main-images/sec-6/goods-3.png" />
+    </a>
+    <span>안구건조에 필요</span>
+  </div>
+</div>
       </section>
       <section class="sec-7 section">
         <div class="top-box">
@@ -583,22 +584,22 @@
         </div>
       </div>
     </footer>
+    <!-- J-Query -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Leins -->
     <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis/dist/lenis.min.js" defer></script>
     <!-- GSAP -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" defer></script>
     <!-- Scroll Trigger -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" defer></script>
-    <!-- script Main -->
-    <script src="main.js" defer></script>
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
-    <!-- J-Query -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" defer></script>
     <!-- Slick Slider -->
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
+    <!-- script Main -->
+    <script src="main.js" defer></script>
     <!-- script JS -->
     <script src="script.js" defer></script>
   </body>
